--- a/.github/workflows/prepare-render.yml
+++ b/.github/workflows/prepare-render.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - contrib
+  workflow_dispatch:
 
 jobs:
   prepare-and-push:
@@ -14,6 +15,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          ref: contrib
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
