[BUGFIX] Link expansion in CI
Runs the correct command for the "Expand shorthand links" run in CI. Shorthand links will now expand correctly.

--- a/.github/workflows/prepare-render.yml
+++ b/.github/workflows/prepare-render.yml
@@ -29,7 +29,7 @@ jobs:
         run: php bin/index-files
 
       - name: Expand shorthand links
-        run: php bin/expand-tags
+        run: php bin/expand-links
 
       - name: Generate table of contents
         run: php bin/generate-tos
